src/content/docs/en/0.19.0/rpc/wallet/getwalletinfo.md
---
name: getwalletinfo
btcversion: 0.19.0
btcgroup: wallet
permalink: en/doc/0.19.0/rpc/wallet/getwalletinfo/
---

getwalletinfo
Returns an object containing various wallet state info.

Result:
{
  "walletname": xxxxx,               (string) the wallet name
  "walletversion": xxxxx,            (numeric) the wallet version
  "balance": xxxxxxx,                (numeric) DEPRECATED. Identical to getbalances().mine.trusted
  "unconfirmed_balance": xxx,        (numeric) DEPRECATED. Identical to getbalances().mine.untrusted_pending
  "immature_balance": xxxxxx,        (numeric) DEPRECATED. Identical to getbalances().mine.immature
  "txcount": xxxxxxx,                (numeric) the total number of transactions in the wallet
  "keypoololdest": xxxxxx,           (numeric) the timestamp (seconds since Unix epoch) of the oldest pre-generated key in the key pool
  "keypoolsize": xxxx,               (numeric) how many new keys are pre-generated (only counts external keys)
  "keypoolsize_hd_internal": xxxx,   (numeric) how many new keys are pre-generated for internal use (used for change outputs, only appears if the wallet is using this feature, otherwise external keys are used)
  "unlocked_until": ttt,             (numeric) the timestamp in seconds since epoch (midnight Jan 1 1970 GMT) that the wallet is unlocked for transfers, or 0 if the wallet is locked
  "paytxfee": x.xxxx,                (numeric) the transaction fee configuration, set in BTC/kB
  "hdseedid": "<hash160>"            (string, optional) the Hash160 of the HD seed (only present when HD is enabled)
  "private_keys_enabled": true|false (boolean) false if privatekeys are disabled for this wallet (enforced watch-only wallet)
  "avoid_reuse": true|false          (boolean) whether this wallet tracks clean/dirty coins in terms of reuse
  "scanning":                        (json object) current scanning details, or false if no scan is in progress
    {
      "duration" : xxxx              (numeric) elapsed seconds since scan start
      "progress" : x.xxxx,           (numeric) scanning progress percentage [0.0, 1.0]
    }
}

Examples:
> bitcoin-cli getwalletinfo 
> curl --user myusername --data-binary '{"jsonrpc": "1.0", "id":"curltest", "method": "getwalletinfo", "params": [] }' -H 'content-type: text/plain;' http://127.0.0.1:8332/


